// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsItemButton render should render in disabled state correctly 1`] = `
<button
  aria-disabled={true}
  className="bcs-VersionsItemButton bcs-is-disabled"
  data-resin-iscurrent={false}
  data-resin-target="select"
  data-testid="versions-item-button"
  onClick={[Function]}
  type="button"
>
  Test
</button>
`;

exports[`elements/content-sidebar/versions/VersionsItemButton render should render in enabled state correctly 1`] = `
<button
  aria-disabled={false}
  className="bcs-VersionsItemButton"
  data-resin-iscurrent={false}
  data-resin-target="select"
  data-testid="versions-item-button"
  onClick={[Function]}
  type="button"
>
  Test
</button>
`;

exports[`elements/content-sidebar/versions/VersionsItemButton render should render in enabled state correctly 2`] = `
<button
  aria-disabled={false}
  className="bcs-VersionsItemButton bcs-is-selected"
  data-resin-iscurrent={false}
  data-resin-target="select"
  data-testid="versions-item-button"
  onClick={[Function]}
  type="button"
>
  Test
</button>
`;
